crates/pg_syntax/tests/snapshots/postgres_regress/horology@261.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2000 + + JUN', 'YYYY  MON');"
---
SelectStmt@0..49
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..47
    FuncCall@7..47
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..34
        Sconst@20..34 "'2000 + + JUN'"
      Ascii44@34..35 ","
      Whitespace@35..36 " "
      AConst@36..47
        Sconst@36..47 "'YYYY  MON'"
  Ascii41@47..48 ")"
  Ascii59@48..49 ";"

