crates/pg_syntax/tests/snapshots/postgres_regress/horology@262.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2000 + + JUN', 'YYYY   MON');"
---
SelectStmt@0..50
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..48
    FuncCall@7..48
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..34
        Sconst@20..34 "'2000 + + JUN'"
      Ascii44@34..35 ","
      Whitespace@35..36 " "
      AConst@36..48
        Sconst@36..48 "'YYYY   MON'"
  Ascii41@48..49 ")"
  Ascii59@49..50 ";"

