crates/pg_syntax/tests/snapshots/postgres_regress/horology@265.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_date('2011 12  18', 'YYYY MM DD');"
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..42
    FuncCall@7..42
      Ident@7..14 "to_date"
      Ascii40@14..15 "("
      AConst@15..28
        Sconst@15..28 "'2011 12  18'"
      Ascii44@28..29 ","
      Whitespace@29..30 " "
      AConst@30..42
        Sconst@30..42 "'YYYY MM DD'"
  Ascii41@42..43 ")"
  Ascii59@43..44 ";"

